Game without clicking on squares

--- a/src/Stylesheets/App.scss
+++ b/src/Stylesheets/App.scss
@@ -1,3 +1,7 @@
+@import 'components/game';
+@import 'components/displaySquare';
+@import 'components/simonSquare';
+
 .App {
   text-align: center;
 }
