--- a/src/Stylesheets/components/_game.scss
+++ b/src/Stylesheets/components/_game.scss
@@ -6,7 +6,7 @@
 
 // Game header
 .game-header {
-  height: 12vw;
+  height: 10vw;
   display: flex;
   flex-direction: column;
 }
@@ -17,11 +17,12 @@
 
 .start-button {
   width: 8vw;
-  height: 5vw;
+  height: 3vw;
   align-self: center;
-}
-
-.start-button p {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
   font-size: 1.5vw;
 }
 
