--- a/src/Stylesheets/components/_game.scss
+++ b/src/Stylesheets/components/_game.scss
@@ -26,7 +26,7 @@
   font-size: 1.5vw;
 }
 
-// Main game area
+// Everything below the header and start button
 .upper-game-body {
   height: 70vh;
   padding-top: 3vh;
